--- a/templates/cse116/cse116.html
+++ b/templates/cse116/cse116.html
@@ -4,7 +4,7 @@
 
 {% block header %}
     <h1>CSE116: Computer Science 2</h1>
-    <h2>Fall 2024</h2>
+    <h2>Spring 2025</h2>
 {% endblock %}
 
 {% block content %}
