--- a/templates/hw/task3.html
+++ b/templates/hw/task3.html
@@ -3,7 +3,7 @@
 {% block title %}CSE116: Task 3{% endblock %}
 
 {% block header %}
-    <h1>Programming Task 3</h1>
+    <h1>Coding Task 3</h1>
     <hr/>
     <h5>Time Estimate: 6 hours</h5>
     <hr/>
