--- a/templates/hw/task6.html
+++ b/templates/hw/task6.html
@@ -3,7 +3,7 @@
 {% block title %}CSE116: Task 6{% endblock %}
 
 {% block header %}
-    <h1>Programming Task 6</h1>
+    <h1>Coding Task 6</h1>
     <hr/>
     <h5>Time Estimate: 7 hours</h5>
     <hr/>
