--- a/templates/cse116/cse116.html
+++ b/templates/cse116/cse116.html
@@ -8,40 +8,70 @@
 {% endblock %}
 
 {% block content %}
-    <a href="https://autolab.cse.buffalo.edu/courses/cse116-f24/assessments" class="non_visual_link">
-        <img src="static_files/images/autolab.svg" class="img-responsive my-social-icon" alt="Autolab"/> Submit programming
-        assignments</a>
-    <br/>
 
-    <a href="https://piazza.com/class/m07zkdwpwv664a/post/6" class="non_visual_link">
-        <img src="static_files/images/piazza.png" class="img-responsive my-social-icon" alt="Piazza"/> Ask questions and find office
-        hours</a><br/>
 
-    <a href="https://github.com/pauled/ClassExampleCodeAlpha" class="non_visual_link">
-        <img src="static_files/images/github.png" class="img-responsive my-social-icon" alt="GitHub Example"/> Code examples shown in lecture
-        slides</a>
-    <br/>
+    <div class="card">
+        <a data-toggle="collapse" data-target="#links">
+            <div class="card-header text-white section-header">
+                <div>
+                    Links <span class="float-right"><i
+                        class='far fa-caret-square-down'></i></span>
+                </div>
+            </div>
+        </a>
 
-    <a href="https://tracing.cse.buffalo.edu" class="non_visual_link">
-        <img src="static_files/images/tracing.png" class="img-responsive my-social-icon" alt="Tracing Tool"/> Memory Diagram Tracing Tool</a><br/>
+        <div id="links" class="collapse show">
+            <div class="card-body">
 
-    <a href="https://www.youtube.com/watch?v=Z75FQvLJW8s&list=PLA82Q_zHGLOtlZRJo2duCl9kKlsM7QGEp" class="non_visual_link">
-        <img src="static_files/images/tracing.png" class="img-responsive my-social-icon" alt="Tracing Tool Demo"/> Tracing Tool Demo Video</a><br/>
+                <a href="https://autolab.cse.buffalo.edu/courses/cse116-s25/assessments" class="non_visual_link">
+                    <img src="static_files/images/autolab.svg" class="img-responsive my-social-icon" alt="Autolab"/> Submit programming
+                    assignments</a>
+                <br/>
 
-    <a href="static_files/MemoryDiagrams-Java.pdf" class="non_visual_link">
-        <img src="static_files/images/pdf.png" class="img-responsive my-social-icon" alt="Memory Diagrams"/> Memory Diagram Reference</a><br/>
+                <a href="https://piazza.com/class/m5loxaebv7zfm/post/6" class="non_visual_link">
+                    <img src="static_files/images/piazza.png" class="img-responsive my-social-icon" alt="Piazza"/> Ask questions and find office
+                    hours</a><br/>
 
-    <a href="https://ublearns.buffalo.edu/d2l/le/content/210294/viewContent/4244670/View" class="non_visual_link">
-        <img src="static_files/images/UBLearns.png" class="img-responsive my-social-icon" alt="UBLearns"/> Watch this semester's lectures</a>
-    <br/>
+                <a href="https://github.com/CSE-116/ClassExampleCode" class="non_visual_link">
+                    <img src="static_files/images/github.png" class="img-responsive my-social-icon" alt="GitHub Example"/> Code examples in lecture
+                    slides</a>
+                <br/>
 
-    <a href="https://www.youtube.com/channel/UCxB_9AWzBvp4mWSk8zpFU6g/videos" class="non_visual_link">
-        <img src="static_files/images/_youtube_.png" class="img-responsive my-social-icon" alt="YouTube"/> Watch past lectures</a>
-    <br/>
+                <a href="https://github.com/pauled/cse116-SP25-A.git" class="non_visual_link">
+                    <img src="static_files/images/github.png" class="img-responsive my-social-icon" alt="GitHub Example"/> Section A live code (Paul's section)</a>
+                <br/>
 
-    <a href="https://discord.gg/nC4eBGM" class="non_visual_link">
-        <img src="static_files/images/discord2.png" class="img-responsive my-social-icon" alt="Discord"/> Chat with other students</a>
-    <br/>
+                <a href="https://github.com/pauled/cse116-SP25-E.git" class="non_visual_link">
+                    <img src="static_files/images/github.png" class="img-responsive my-social-icon" alt="GitHub Example"/> Section E live code (Paul's section)</a>
+                <br/>
+
+                <a href="https://tracing.cse.buffalo.edu" class="non_visual_link">
+                    <img src="static_files/images/tracing.png" class="img-responsive my-social-icon" alt="Tracing Tool"/> Memory Diagram Tracing Tool</a><br/>
+
+                <a href="https://www.youtube.com/watch?v=Z75FQvLJW8s&list=PLA82Q_zHGLOtlZRJo2duCl9kKlsM7QGEp" class="non_visual_link">
+                    <img src="static_files/images/tracing.png" class="img-responsive my-social-icon" alt="Tracing Tool Demo"/> Tracing Tool Demo Video</a><br/>
+
+                <a href="static_files/MemoryDiagrams-Java.pdf" class="non_visual_link">
+                    <img src="static_files/images/pdf.png" class="img-responsive my-social-icon" alt="Memory Diagrams"/> Memory Diagram Reference</a><br/>
+
+                <a href="https://ublearns.buffalo.edu/d2l/le/content/210294/viewContent/4244670/View" class="non_visual_link">
+                    <img src="static_files/images/UBLearns.png" class="img-responsive my-social-icon" alt="UBLearns"/> Watch this semester's lectures</a>
+                <br/>
+
+                <a href="https://www.youtube.com/channel/UCxB_9AWzBvp4mWSk8zpFU6g/videos" class="non_visual_link">
+                    <img src="static_files/images/_youtube_.png" class="img-responsive my-social-icon" alt="YouTube"/> Watch past lectures</a>
+                <br/>
+
+                <a href="https://discord.gg/nC4eBGM" class="non_visual_link">
+                    <img src="static_files/images/discord2.png" class="img-responsive my-social-icon" alt="Discord"/> Chat with other students</a>
+                <br/>
+
+
+            </div>
+        </div>
+    </div>
+
+
 
     <hr/>
 
@@ -89,7 +119,7 @@
     {% endfor %}
 
     <hr>
-    <a href="https://github.com/jessehartloff/CSE116" class="non_visual_link">
+    <a href="https://github.com/CSE-116/CSE116-Website" class="non_visual_link">
         <img src="static_files/images/github.png" class="img-responsive my-social-icon" alt="Website GitHub"/> Website GitHub</a>
     <br/>
 
