--- a/templates/hw/task2.html
+++ b/templates/hw/task2.html
@@ -3,7 +3,7 @@
 {% block title %}CSE116: Task 2{% endblock %}
 
 {% block header %}
-    <h1>Programming Task 2</h1>
+    <h1>Coding Task 2</h1>
     <hr/>
     <h5>Time Estimate: 5 hours</h5>
     <hr/>
