--- a/templates/hw/task4.html
+++ b/templates/hw/task4.html
@@ -3,7 +3,7 @@
 {% block title %}CSE116: Task 4{% endblock %}
 
 {% block header %}
-   <h1>Programming Task 4</h1>
+   <h1>Coding Task 4</h1>
    <hr/>
    <h5>Time Estimate: 8 hours</h5>
    <hr/>
