--- a/templates/hw/task5.html
+++ b/templates/hw/task5.html
@@ -3,7 +3,7 @@
 {% block title %}CSE116: Task 5{% endblock %}
 
 {% block header %}
-   <h1>Programming Task 5</h1>
+   <h1>Coding Task 5</h1>
    <hr/>
    <h5>Time Estimate: 6 hours</h5>
    <hr/>
