Update UBLearns link

--- a/templates/cse116/cse116.html
+++ b/templates/cse116/cse116.html
@@ -54,7 +54,7 @@
                 <a href="static_files/MemoryDiagrams-Java.pdf" class="non_visual_link">
                     <img src="static_files/images/pdf.png" class="img-responsive my-social-icon" alt="Memory Diagrams"/> Memory Diagram Reference</a><br/>
 
-                <a href="https://ublearns.buffalo.edu/d2l/le/content/210294/viewContent/4244670/View" class="non_visual_link">
+                <a href="https://ublearns.buffalo.edu/d2l/le/content/255893/Home?itemIdentifier=D2L.LE.Content.ContentObject.ModuleCO-4489861" class="non_visual_link">
                     <img src="static_files/images/UBLearns.png" class="img-responsive my-social-icon" alt="UBLearns"/> Watch this semester's lectures</a>
                 <br/>
 
